@@ -1,3 +1,7 @@
+2008-08-28  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/imgPhoto.test: Fix failures. [Bug 2080587]
+
 2008-08-28  Ania Pawelczyk  <aniap@users.sourceforge.net>
 
 	* tests/option.test: Update to tcltest2
